# tap-trading-rs

./: Cargo.toml  README.md  docker-compose.yml  prd.md
config/: default.toml
infra/debezium/: account-balances-connector.json  cdc-runbook.md  redis-sync-spec.md
infra/postgres/: 00-replication-setup.sql  01-publication.sql  postgresql-cdc.conf.example
infra/postgres/init/: 00-replication-setup.sql
infra/rdi/: package-pipeline.sh  rdi-runbook.md
infra/rdi/jobs/: account_balances.yaml
infra/rdi/runtime/: config.yaml
migrations/: 0001_init_ledger.sql  0002_init_orders_and_grid.sql  0003_init_payments.sql  0004_clickhouse_price_history.sql  0005_clickhouse_orders.sql
src/: main.rs
src/api/: mod.rs
src/api/routes/: grid.rs  health.rs  mod.rs  orders.rs  payments.rs  prices.rs
src/app/: mod.rs  state.rs  telemetry.rs
src/config/: mod.rs
src/domain/: mod.rs
src/domain/common/: mod.rs
src/domain/grid/: mod.rs
src/domain/ledger/: mod.rs
src/domain/order/: mod.rs
src/domain/payment/: mod.rs
src/domain/price_stream/: mod.rs
src/infra/clickhouse/: mod.rs  order.rs  price_history.rs
src/infra/postgres/: ledger.rs  mod.rs  order.rs  payment.rs
src/infra/redis/: balance_cache.rs  mod.rs  order_cache.rs  price_stream.rs
